fix: change naming from anncmt products to assignments, adapt controller and tests
